--- a/styles.css
+++ b/styles.css
@@ -150,14 +150,14 @@ label[for="other"] {
 button {
   padding: 12px 24px;
   color: #FFF;
-  background-color: #ff6600;
-  font-size: 16px;
+  background-color: turquoise;
+  font-size: 20px;
   text-align: center;
   font-style: normal;
   border-radius: 5px;
-  width: 100%;
+  width: 50%;
   border: 1px solid lightgray;
-  border-width: 1px 1px 3px;
+  border-width: 2px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
   margin-bottom: 10px;
 }
