--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ button {
   text-align: center;
   font-style: normal;
   border-radius: 5px;
-  width: 50% center;
+  width: 60%;
   border: 1px solid whitesmoke;
   border-width: 2px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
