--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body{
     margin: 10%;
-    background-color: whitesmoke
+    background-color: white
 }
 
 header {
@@ -19,7 +19,7 @@ h2,
 legend {
     margin: 0 0 10px 0;
     color: black;
-    font-size: 1.2rem;
+    font-size: 2rem;
     font-weight: 700;
 
 }
@@ -29,6 +29,12 @@ legend {
     color: white;
     padding: 20px 0;
     margin-bottom: 20px;
+}
+
+.main-title-blurb {
+   color: darkblue;  
+   padding: 20px 0;
+   margin-bottom: 20px;  
 }
 
 .main-text h1 {
