--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,9 @@ h3 {
     display: block;
     width: 100%;
     border: none;
-    background-color: #fff;
-    border: 1px solid #ea4c4c54;
+    background-color: gainsboro;
+    border: 1px solid darkolivegreen;
     border-radius: 5px;
-    color: var(--secondary-color);
     margin: 10px 0;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     padding: 16px;
