--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,9 @@ fieldset {
 }
 
 form > fieldset:first-of-type {
-    border-bottom: 2px solid darkolivegreen;
-    margin-bottom: 35px;
-    padding-bottom: 35px;
+    border-bottom: 2px solid darkslategray;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
 }
 
 fieldset p {
