--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ legend {
 }
 
 fieldset {
-    border-top: 2px solid darkslategray;
+    border: none;
     margin: 0;
     padding: 0;
 }
@@ -109,6 +109,7 @@ form > fieldset:first-of-type {
     margin-bottom: 25px;
     padding-bottom: 25px;
 }
+
 
 .selection-container {
     margin: 13px 0;
