--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,9 @@ h3 {
     padding: 20px 0;
     margin-bottom: 20px;
 }
-
+.main-form-container ::placeholder {
+    font-size: 1.2rem;
+}
 
 .about-newsletter {
     border-bottom: 5px solid;
