--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,13 @@ h3 {
     margin-bottom: 20px;
 }
 .main-form-container ::placeholder {
-    font-size: 1.2rem;
+    font-size: 0.6rem;
 }
+
+.main-form-container label {
+    font-size: 0.8rem;
+}
+
 
 .about-newsletter {
     border-bottom: 5px solid;
