--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h3 {
     margin-bottom: 20px;
 }
 .main-form-container ::placeholder {
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 
@@ -48,16 +48,11 @@ h3 {
 }
 
 .about-newsletter p {
-    color: var(--secondary-color);
+    color: black;
     line-height: 1.4;
     margin: 15px 0 25px 0;
 }
 
-.form-container {
-    margin: 5px 4%;
-    border-top: 2px solid var(--primary-color);
-    padding: 30px 0 0 0;
-}
 
 .input-field {
     display: block;
