--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ textarea {
     border: 1px solid darkcyan;
     border-radius: 5px;
     color: black;
+    font-size: 1.2rem;
     padding: 5px;
     margin-bottom: 35px;
 }
