--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,11 @@ textarea {
 label[for="other"] {
     display: block;
     margin: 30px 0 20px 0;
-    color: var(--secondary-color);
+    font-size: 1.2rem;
+    color: black;
+}
+.selection-container {
+    font-size: 1.2rem;
 }
 
 button {
