--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,14 @@ button[type="submit"]:hover {
 }
 
 
+.selection-container > p {
+    font-size: 1rem;
+    color: black;
+    margin-bottom: 150px;
+}
+
+
+
 /* Media Queries */
 @media (min-width: 768px) {
 
