--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
     margin: 10%;
     background-color: white
 }
-
+fieldset
 header {
     text-align: center;
     font-size: 1.8rem;
@@ -28,6 +28,9 @@ legend {
 h3 {
     color: black;
     font-size: 1.4rem;
+    border-bottom: 2px solid darkslategray;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
 }
 
 .main-title {
